// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportTimeline renders correctly with no exportProcessStates 1`] = `
<ul
  class="MuiTimeline-root MuiTimeline-positionRight css-urcpbk-MuiTimeline-root"
  data-testid="export-timeline-a5bebb18-bfb7-4393-a6b4-83cbbfcf4926"
>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  >
    This model has not been exported yet.
  </p>
</ul>
`;

exports[`ExportTimeline renders correctly with some exportProcessStates 1`] = `
<ul
  class="MuiTimeline-root MuiTimeline-positionRight css-urcpbk-MuiTimeline-root"
  data-testid="export-timeline-a5bebb18-bfb7-4393-a6b4-83cbbfcf4926"
>
  <div
    data-testid="timeline-item"
  />
  <div
    data-testid="timeline-item"
  />
  <div
    data-testid="timeline-item"
  />
</ul>
`;
